--- a/src/templates/header.phtml
+++ b/src/templates/header.phtml
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>LLMRT Debrief & Feedback</title>
+    <title><?= $appName ?></title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -109,7 +109,7 @@
           </ul>
         </nav>
         -->
-        <h3 class="text-muted">LLMRT Debrief & Feedback</h3>
+        <h3 class="text-muted"><?= $appName ?></h3>
       </div>
 
       
